--- a/views/customer/profile.ejs
+++ b/views/customer/profile.ejs
@@ -72,7 +72,7 @@
         <div class="well profile" style="min-width: 100%;">
             <div class="col-sm-12 ">
                 <h3>Wishlist</h3>
-                <% if(wishlists.length !== 0 ){%>
+                <% if(wishlists){%>
                 <table  class="table table-bordered">
                     <th>Products</th>
                     <th>Quantity</th>
