--- a/views/orders/setSerialInOrder.ejs
+++ b/views/orders/setSerialInOrder.ejs
@@ -24,28 +24,29 @@
                             <input type="text" name="model" id="model" value="{{model_name}}" class="form-control"
                                 required>
                         </div>
-                        {{!-- {{warranted}}
-                      {{# if warranted}} --}}
+                      
                          <div class="form-group">
                             <label for="Serial">Serial Numbers</label>
                             <input type="text" name="Serial" id="Serial" class="form-control"
-                            {{# if previous }}
-                            value="{{previous}}"
-                            {{/if}}
+                            <% if(previous){%>
+                            value="<%=previous%>"
+                            <% } %>
                                 required>
                                 <select id="selected" onchange="set_serial_last()">
                                     <option value="0" selected>select Serial Numbers</option>
-                                    {{# each serial}}
-                                    {{# if this.number}}
-                                    <option value="{{this.number}}">{{this.number}}</option>
-                                    {{else}}
-                                    <option value="{{this.sid}}">{{this.sid}}</option>
-                                    {{/if}}
-                                    {{/each}}
+                                    <% for(let i=0; i< serial.length; i++){ %>
+                                    <% if(serial[i].number) { %>
+                                    <option value="<%=serial[i].number%>"><%=serial[i].number%></option>
+                                     <% } else { %>
+
+                                    <option value="<%=serial[i].sid%>"><%=serial[i].sid%></option>
+                                    <% } %>
+                                    <% } %>
+                                    
                                 </select>
                                 <p id="new_msg"></p>
                         </div>
-                        {{!-- {{/if}} --}}
+                        
                         <button  type="submit" class="btn btn-primary">Submit</button>
 
                     </form>
