--- a/views/products/dealerProduct.ejs
+++ b/views/products/dealerProduct.ejs
@@ -1,3 +1,6 @@
+
+<%- include('../partials/_head') %>
+
 <div class="container-fluid">
     <div class="box">
         <button class="collapsible active">
@@ -21,9 +24,9 @@
                                                 <option value="" selected>Select One</option>
                                                 <% for(let i=0; i< cat.length; i++){ %>
                                                 <option value="<%=cat[i]._id%>,<%=cat[i].name%>"
-                                                    <% if(cat[i]._id == product.category ){ %>>
-                                                     selected
-                                                     <% } %>>
+                                                   
+                                                    
+                                                     >
                                                     <%=cat[i].name%></option>
                                                 <% } %>
                                             </select>
@@ -43,8 +46,7 @@
                                                 <option value="0">select one</option>
                                                 <% for(let i=0; i< categories.length; i++){ %>
                                                 <option value="<%=categories[i]._id%>,<%=categories[i].name%>"
-                                                    <% if(categories[i]._id == product.subcategory) { %>
-                                                    selected<%}%>><%=categories[i].name%> </option>
+                                                   ><%=categories[i].name%> </option>
                                                 <%}%>>
                                             </select>
                                         </div>
@@ -66,7 +68,7 @@
                                                 <option value="" selected>select one</option>
                                                 <% for(let i=0; i< brand.length; i++){ %>
                                                 <option value="<%=brand[i]._id%>,<%=brand[i].name%>"
-                                                    <% if(brand[i]._id == product.brand){%> selected<%}%>>
+                                                   >
                                                     <%=brand[i].name%> </option>
                                                 <%}%>
                                             </select>
@@ -82,7 +84,7 @@
                                             <label class="lbl" for="model">Model<span style="color: red">*</label>
                                         </div>
                                         <div class="col-md-6">
-                                            <input type="text" class="form-control inp" value="<%=product.model%>"
+                                            <input type="text" class="form-control inp" value=""
                                                 name="model" id="model" required>
                                         </div>
                                     </div>
@@ -108,9 +110,9 @@
                                         <label for="cate" style="color:azure">Category<span
                                                 style="color: red">*</span></label>
                                         <select class="form-control" name="cate" id="cate">
-                                            {{# each cat}}
-                                            <option value="{{this._id}}">{{this.name}}</option>
-                                            {{/each}}
+                                            <% for(let i=0; i< cat.length; i++){ %>
+                                            <option value="<%= cat[i]._id%>"><%= cat[i].name%></option>
+                                            <% } %>
                                         </select>
                                     </div>
                                     <div class="form-group">
@@ -133,146 +135,7 @@
                                 </form>
                             </div>
 
-                            {{# if product}}
-                            <form action="" id="save_inventory_dealer">
-                                <input type="hidden" name="_id" id="_id" value="{{product._id}}">
-                                <div class="row">
-                                    <div class="col-md-5 col5">
-                                        <label class="lbl" for="products_invoice">Product Name:<span
-                                                style="color:red">*</span>
-                                        </label>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input type="text" class="form-control inp" name="productName" id="productName"
-                                            value="{{product.productName}}">
-                                    </div>
-                                </div>
-                                <br>
-                                <div class="row">
-                                    <div class="col-md-5 col5">
-                                        <label class="lbl" for="pid">PID:
-                                        </label>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input type="text" class="form-control inp" name="pid" id="pid"
-                                            value="{{product.pid}}">
-                                    </div>
-                                </div>
-                                <br>
-
-                                <div class="row">
-                                    <div class="col-md-5 col5">
-                                        <label class="lbl" for="name">Title:
-                                        </label>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input type="text" class="form-control inp" name="name" id="name" required>
-                                    </div>
-                                </div>
-                                <br>
-                                {{!-- <div class="row">
-                                    <div class="col-md-5 col5">
-                                        <label class="lbl" for="sellingPrice">Selling Price:
-                                        </label>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input type="text" class="form-control inp" name="sellingPrice"
-                                            id="sellingPrice" required>
-                                    </div>
-                                </div>
-                                <br> --}}
-                                {{!-- {{# each features}}
-                            <div class="row">
-                                <div class="col-md-5 col5">
-                                    <label class="lbl" for="v{{@index}}">{{this}}</label>
-                                </div>
-                                <div class="col-md-6">
-                                    <input type="hidden" name="new_feat_{{@index}}" id="new_feat_{{@index}}"
-                                        value="{{this}}">
-                                    <input type="text" name="v{{@index}}" id="v{{@index}}" class="form-control inp"
-                                        placeholder="" required>
-                                </div>
-                            </div>
-                            <br>
-                            {{/each}} --}}
-
-                                {{!-- <div id="add"> --}}
-                                {{!-- adds previous features --}}
-                                {{!-- </div> --}}
-
-                                {{!-- <div class="row">
-                                <div class="col-md-5 col5">
-                                    <label class="lbl" for="new_feat_label">New Feature:</label>
-                                </div>
-                                <div class="col-md-6">
-                                    <input type="hidden" id="new_feat" name="new_feat"
-                                        value="{{feature_total}}">--}}{{!-- counts the total newly added features --}}
-                                {{!-- <input type="text" id="new_feat_label" name="new_feat_label"
-                                        class="form-control inp" placeholder="write a new feature name">
-                                </div>
-                                <div class="col-md-1">
-                                    <a id="addNewfeature" class="btn btn-success" style="padding: 1px 12px">Add</a>
-                                </div>
-                            </div>
-                            <br> --}}
-
-                                <div class="row">
-                                    <div class="col-md-5 col5">
-                                        <label class="lbl" for="weight">Weight:
-                                        </label>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input type="text" class="form-control inp" name="weight" id="weight">
-                                    </div>
-                                </div>
-                                <br>
-
-                                <div class="row">
-                                    <div class="col-md-5 col5">
-                                        <label class="lbl" for="warranty">Warranty:
-                                        </label>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input type="text" class="form-control inp" name="warranty" id="warranty"
-                                            required>
-                                    </div>
-                                </div>
-                                <br>
-
-                                <div class="row">
-                                    <div class="col-md-5 col5">
-                                        <label class="lbl" for="description">Description:</label>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <textarea type="text" class="form-control inp" name="description"
-                                            id="description"></textarea>
-                                    </div>
-                                </div>
-                                <br>
-
-                                {{!-- <div class="row">
-                                <div class="col-md-5 col5">
-                                    <label class="lbl" for="HomePagetag">Tag<span style="color:red">*</span></label>
-                                </div>
-                                <div class="col-md-6">
-                                    <select class="form-control inp" name="HomePagetag" id="HomePagetag">
-                                        <option value="None">None</option>
-                                        <option value="Hot Deals">Hot Deals</option>
-                                        <option value="Trending">Trending</option>
-                                        <option value="New Product">New Product</option>
-                                        <option value="Exclusive Products ">Exclusive Products </option>
-                                    </select>
-                                </div>
-                            </div>
-                            <br> --}}
-                                <div class="row">
-                                    <center>
-                                        <button type="submit" class="btn btn-primary">Save</button>
-                                    </center>
-                                </div>
-
-                            </form>
-                            {{/if}}
+                            
                         </div>
                     </div>
                 </div>
@@ -289,7 +152,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
-                            <h4>{{productentry_msg}}</h4>
+                            <h4><%=productentry_msg%></h4>
                            
                         </div>
                     </div>
@@ -309,7 +172,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
-                            <h4>{{ productentry_msg }}</h4>
+                            <h4><%= productentry_msg %></h4>
                             
                         </div>
                     </div>
@@ -328,8 +191,8 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
-                            <h4>{{productentry_msg}}</h4>
-                            {{!-- <form action="/products/upload" method="POST" enctype="multipart/form-data">
+                            <h4><%=productentry_msg%></h4>
+                            <!-- {{!-- <form action="/products/upload" method="POST" enctype="multipart/form-data">
                             <input type="hidden" name="img_number" id="img_number">
                             <div class="row">
                                 <div class="col-md-5 col5">
@@ -358,7 +221,7 @@
                                     <button type="submit" id="save_img" class="btn btn-default btn-md">Submit</button>
                                 </center>
                             </div>
-                        </form> --}}
+                        </form> --}} -->
                         </div>
                     </div>
                 </div>
@@ -379,7 +242,7 @@
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
                             <h4>{{productentry_msg}}</h4>
-                            {{!-- <form action="/products/upload" method="POST" enctype="multipart/form-data">
+                            <!-- {{!-- <form action="/products/upload" method="POST" enctype="multipart/form-data">
                             <input type="hidden" name="img_number" id="img_number">
                             <div class="row">
                                 <div class="col-md-5 col5">
@@ -408,7 +271,7 @@
                                     <button type="submit" id="save_img" class="btn btn-default btn-md">Submit</button>
                                 </center>
                             </div>
-                        </form> --}}
+                        </form> --}} -->
                         </div>
                     </div>
                 </div>
@@ -426,8 +289,8 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
-                            <h4>{{ productentry_msg }}</h4>
-                            {{!-- <form action="/products/relatedProducts" method="POST">
+                            <h4><%= productentry_msg %></h4>
+                            <!-- {{!-- <form action="/products/relatedProducts" method="POST">
 
                             <div class="row">
                                 <div class="col-md-5 col5">
@@ -480,7 +343,7 @@
                                 </tr>
                                 {{/each}}
                             </tbody>
-                        </table> --}}
+                        </table> --}} -->
                         </div>
                     </div>
                 </div>
@@ -499,7 +362,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
-                            <h4>{{productentry_msg}}</h4>
+                            <h4><%= productentry_msg %></h4>
                         </div>
                     </div>
                 </div>
@@ -507,3 +370,4 @@
         </div>
     </div>
 </div>
+<%- include('../partials/_footer') %>
