--- a/views/parents/brandList.ejs
+++ b/views/parents/brandList.ejs
@@ -1,4 +1,3 @@
-
 <%- include('../partials/_head') %>
 
 <div class="container-fluid" style="width:100%;min-height: 700px">
@@ -6,44 +5,49 @@
         <a href="#"><b>Brand</b>LIST</a>
     </div>
     <div class="row">
-        <button class="btn bg-green" style="float: right;margin: 10px 20px;" id="btnExport" onclick="javascript:xport.toXLS('ptable');"> <li class="fa fa-download" style="padding: 5px"></li>Export as Excel</button>
-        <a  class="btn bg-purple" href="/category/newBrand" style="float: right;margin: 10px 5px;"><li class="fa fa-plus-square" style="padding: 5px"></li>New Brand</a>
+        <button class="btn bg-green" style="float: right;margin: 10px 20px;" id="btnExport"
+            onclick="javascript:xport.toXLS('ptable');">
+            <li class="fa fa-download" style="padding: 5px"></li>Export as Excel
+        </button>
+        <a class="btn bg-purple" href="/category/newBrand" style="float: right;margin: 10px 5px;">
+            <li class="fa fa-plus-square" style="padding: 5px"></li>New Brand
+        </a>
     </div><br>
 
     <div style="background-color: white">
-        <table id="ptable" style="width:100%" class="table table-striped" >
+        <table id="ptable" style="width:100%" class="table table-striped">
             <thead>
-            <tr>
-                <th>#</th>
-                <th>NAME</th>
-                <th>STATUS</th>
-                <th>ACTION</th>
-            </tr>
+                <tr>
+                    <th>#</th>
+                    <th>NAME</th>
+                    <th>STATUS</th>
+                    <th>ACTION</th>
+                </tr>
             </thead>
             <tbody>
-            <% for(let i=0; i< brand.length; i++){ %>
-            <tr>
-                <td><%=brand[i].count%></td>
-                <td><%=brand[i].name%></td>
-                <% if(brand[i].enabled) { %>
-                <td><span class="tags">Enabled</span></td>
-                <% } else { %>
-                <td><span  class="tags"  style="background: rgb(202, 111, 129)">Disabled</span></td>
-                <% } %>
-                <td>
-                    <a href="/category/updateBrand/<%=brand[i]._id%>" data-toggle="tooltip" 
-                        title="Edit info" class="btn btn-primary btn-sm" >Edit</a>
+                <% for(let i=0; i< brand.length; i++){ %>
+                <tr>
+                    <td><%=brand[i].count%></td>
+                    <td><%=brand[i].name%></td>
                     <% if(brand[i].enabled) { %>
-                    
-                    <a href="/category/brand/changeStatus/<%=brand[i]._id%>/false" data-toggle="tooltip" 
-                        title="Disable the brand" class="btn btn-primary btn-sm" >Disable</a>
+                    <td><span class="tags">Enabled</span></td>
                     <% } else { %>
-                        <a href="/category/brand/changeStatus/<%=brand[i]._id%>/true" data-toggle="tooltip" 
-                        title="Enable the brand" class="btn btn-primary btn-sm" >Enable</a>
+                    <td><span class="tags" style="background: rgb(202, 111, 129)">Disabled</span></td>
                     <% } %>
-                </td>
-            </tr>
-            <% } %>
+                    <td>
+                        <a href="/category/updateBrand/<%=brand[i]._id%>" data-toggle="tooltip" title="Edit info"
+                            class="btn btn-primary btn-sm">Edit</a>
+                        <% if(brand[i].enabled) { %>
+
+                        <a href="/category/brand/changeStatus/<%=brand[i]._id%>/false" data-toggle="tooltip"
+                            title="Disable the brand" class="btn btn-primary btn-sm">Disable</a>
+                        <% } else { %>
+                        <a href="/category/brand/changeStatus/<%=brand[i]._id%>/true" data-toggle="tooltip"
+                            title="Enable the brand" class="btn btn-primary btn-sm">Enable</a>
+                        <% } %>
+                    </td>
+                </tr>
+                <% } %>
             </tbody>
         </table>
 
@@ -52,10 +56,10 @@
 </div>
 <br>
 <script>
-    $(document).ready(function() {
-        $('#ptable').DataTable( {
+    $(document).ready(function () {
+        $('#ptable').DataTable({
             stateSave: true
-        } );
-    } );
+        });
+    });
 </script>
 <%- include('../partials/_footer') %>
